[gd_scene load_steps=8 format=3 uid="uid://dvuk52hggawps"]

[ext_resource type="Script" uid="uid://byanymqomfcqc" path="res://scripts/death_screen.gd" id="1_uyutr"]
[ext_resource type="AudioStream" uid="uid://dxsf0alrbk1js" path="res://assets/audio/error.wav" id="2_dwo6e"]
[ext_resource type="FontFile" uid="uid://c71hixmpr8htu" path="res://assets/Misc/VCR_OSD_MONO_1.001.ttf" id="2_mqh5l"]

[sub_resource type="FontFile" id="FontFile_dwo6e"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_mqh5l"]
font = ExtResource("2_mqh5l")

[sub_resource type="SystemFont" id="SystemFont_vifqf"]

[sub_resource type="LabelSettings" id="LabelSettings_7ns25"]
font = SubResource("SystemFont_vifqf")
font_size = 100
font_color = Color(0.960784, 0.733333, 0.411765, 1)

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uyutr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_mqh5l")
theme_override_font_sizes/font_size = 31
text = "You Died!"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mqh5l")
text = "Restart"

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mqh5l")
text = "Return to Menu"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_mqh5l")
text = "Quit Game"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_dwo6e")

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 99.0
grow_vertical = 0
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("FontFile_dwo6e")
text = "Version 0.0.0"
label_settings = SubResource("LabelSettings_mqh5l")
vertical_alignment = 2

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -258.5
offset_top = 76.0
offset_right = 259.5
offset_bottom = 176.0
grow_horizontal = 2
text = "AFTERMATH"
label_settings = SubResource("LabelSettings_7ns25")
horizontal_alignment = 1
vertical_alignment = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
